data/arm_collected_templates_new/template_27179_azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "The name of the administrator account of the new VM and domain"
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password for the administrator account of the new VM and domain"
            }
        },
        "domainName": {
            "type": "string",
            "metadata": {
                "description": "The FQDN of the Active Directory Domain to be created"
            }
        },
        "dnsPrefix": {
            "type": "string",
            "defaultValue": "[concat(parameters('prefix'), uniqueString(resourceGroup().id))]",
            "metadata": {
                "description": "The DNS prefix for the public IP address used by the Load Balancer"
            }
        },
        "vmSize": {
            "type": "string",
            "defaultValue": "Standard_D2s_v3",
            "metadata": {
                "description": "Size of the VM for the controller"
            }
        },
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The location of resources, such as templates and DSC modules, that the template depends on"
            },
            "defaultValue": "[deployment().properties.templateLink.uri]"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "Auto-generated token to access _artifactsLocation. Leave it blank unless you need to provide your own value."
            },
            "defaultValue": ""
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "virtualMachineName": {
            "type": "string",
            "defaultValue": "ad-vm",
            "metadata": {
                "description": "Virtual machine name."
            }
        },
        "virtualNetworkAddressRange": {
            "type": "string",
            "defaultValue": "10.0.0.0/16",
            "metadata": {
                "description": "Virtual network address range."
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "[concat(parameters('prefix'), '-vnet')]",
            "metadata": {
                "description": "The name of the virtualNetwork."
            }
        },
        "subnetName": {
            "type": "string",
            "defaultValue": "[concat(parameters('prefix'), '-vnet-subnet')]",
            "metadata": {
                "description": "The name of the subnet."
            }
        },
        "privateIPAddress": {
            "type": "string",
            "defaultValue": "10.0.0.4",
            "metadata": {
                "description": "Private IP address."
            }
        },
        "subnetRange": {
            "type": "string",
            "defaultValue": "10.0.0.0/24",
            "metadata": {
                "description": "Subnet IP range."
            }
        },
        "prefix": {
            "type": "string",
            "defaultValue": "ad-",
            "metadata": {
                "description": "Resource name begins with this prefix."
            }
        },
        "fileUris": {
            "type": "String"
        },
        "arguments": {
            "defaultValue": " ",
            "type": "SecureString"
        },
        "SASkey": {
            "type": "String",
            "metadata": {
                "description": "The SAS Key for the Storage Account"
            }
        }   
     },
    "variables": {
        "loadBalancerFrontEndIPName": "[concat(parameters('prefix'), '-LBFE')]",
        "backendAddressPoolName": "[concat(parameters('prefix'), '-LBBE')]",
        "inboundNatRulesName": "[concat(parameters('prefix'), '-RDP')]",
        "TCPnatRule": "[concat(parameters('prefix'), '-TCP')]",
        "UDPnatRule": "[concat(parameters('prefix'), '-UDP')]",
        "networkInterfaceName": "[concat(parameters('prefix'), '-nic')]",
        "publicIPAddressName": "[concat(parameters('prefix'),'-ip')]",
        "availabilitySetName": "[concat(parameters('prefix'), '-AvailabiltySet')]",
        "loadBalancerName": "[concat(parameters('prefix'),'-LoadBalancer')]",
        "nsgname": "[concat(parameters('prefix'),'-vnet-subnet-nsg')]",
        "UriFileNamePieces": "[split(parameters('fileUris'), '/')]",
        "firstFileNameString": "[variables('UriFileNamePieces')[sub(length(variables('UriFileNamePieces')), 1)]]",
        "firstFileNameBreakString": "[split(variables('firstFileNameString'), '?')]",
        "firstFileName": "[variables('firstFileNameBreakString')[0]]",
        "SASKey": "[parameters('SASkey')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-03-01",
            "name": "[variables('publicIPAddressName')]",
            "location": "[parameters('location')]",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsPrefix')]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "apiVersion": "2022-03-01",
            "location": "[parameters('location')]",
            "name": "[variables('availabilitySetName')]",
            "properties": {
                "PlatformUpdateDomainCount": 20,
                "PlatformFaultDomainCount": 2
            },
            "sku": {
                "name": "Aligned"
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2021-04-01",
            "name": "VNet",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[uri(parameters('_artifactsLocation'), concat('nestedtemplates/vnet.json', parameters('_artifactsLocationSasToken')))]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "virtualNetworkName": {
                        "value": "[parameters('virtualNetworkName')]"
                    },
                    "virtualNetworkAddressRange": {
                        "value": "[parameters('virtualNetworkAddressRange')]"
                    },
                    "subnetName": {
                        "value": "[parameters('subnetName')]"
                    },
                    "subnetRange": {
                        "value": "[parameters('subnetRange')]"
                    },
                    "location": {
                        "value": "[parameters('location')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2020-03-01",
            "name": "[variables('loadBalancerName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('publicIPAddressName')]"
            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "[variables('loadBalancerFrontEndIPName')]",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[variables('backendAddressPoolName')]"
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "[variables('inboundNatRulesName')]",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', variables('loadBalancerName'), variables('loadBalancerFrontEndIPName'))]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 3389,
                            "backendPort": 3389,
                            "enableFloatingIP": false
                        }
                    },
                    {
                        "name": "[variables('TCPnatRule')]",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', variables('loadBalancerName'), variables('loadBalancerFrontEndIPName'))]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": false
                        }
                    },
                    {
                        "name": "[variables('UDPnatRule')]",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', variables('loadBalancerName'), variables('loadBalancerFrontEndIPName'))]"
                            },
                            "protocol": "UDP",
                            "frontendPort": 3391,
                            "backendPort": 3391,
                            "enableFloatingIP": false
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('prefix'), '-asg-web')]",
            "location": "[parameters('location')]",
            "properties": {
                "provisioningState": "Succeeded"
            }
        },
        {
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('prefix'), '-asg-rdgw')]",
            "location": "[parameters('location')]",
            "properties": {
                "provisioningState": "Succeeded"
            }
        },
        {
            "type": "Microsoft.Network/applicationSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('prefix'), '-asg-rdsh')]",
            "location": "[parameters('location')]",
            "properties": {
                "provisioningState": "Succeeded"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "name": "[variables('networkInterfaceName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "VNet",
                "[variables('loadBalancerName')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('privateIPAddress')]",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', variables('loadBalancerName'), variables('backendAddressPoolName'))]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', variables('loadBalancerName'), variables('inboundNatRulesName'))]"
                                },
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', variables('loadBalancerName'), variables('TCPnatRule'))]"
                                },
                                {
                                    "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', variables('loadBalancerName'), variables('UDPnatRule'))]"
                                }
                            ],
                            "applicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', concat(parameters('prefix'), '-asg-web'))]"
                                },
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', concat(parameters('prefix'), '-asg-rdgw'))]"  
                                },
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', concat(parameters('prefix'), '-asg-rdsh'))]"
                                }
                            ]
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[concat('/subscriptions/', subscription().subscriptionId,'/resourceGroups/', resourceGroup().name, '/providers/Microsoft.Network/networkSecurityGroups/', variables('nsgname'))]"
                }
            }
        },
                {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-01-01",
            "name": "[variables('nsgname')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat(parameters('prefix'), '-asg-web')]",
                "[concat(parameters('prefix'), '-asg-rdgw')]",
                "[concat(parameters('prefix'), '-asg-rdsh')]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "flushConnection": false,
                "securityRules": [
                {
                    "name": "AllowCustomWeb",
                    "id": "/subscriptions/MOIS Cloud Development/resourceGroups/moisaio/providers/Microsoft.Network/networkSecurityGroups/moiskabeer-vnet-subnet-nsg/securityRules/AllowCustomWeb",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow custom traffic from all VMs in VNET",
                    "protocol": "tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "*",
                    "destinationApplicationSecurityGroups": [
                                        {
                                            "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', concat(parameters('prefix'), '-asg-web'))]"
                                        }
                                        ],
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "AllowCustomRdgb",
                    "id": "/subscriptions/MOIS Cloud Development/resourceGroups/moisaio/providers/Microsoft.Network/networkSecurityGroups/moiskabeer-vnet-subnet-nsg/securityRules/AllowCustomRdgb",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow custom traffic from all VMs in VNET",
                    "protocol": "udp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3391",
                    "sourceAddressPrefix": "*",
                    "destinationApplicationSecurityGroups": [
                                        {
                                            "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', concat(parameters('prefix'), '-asg-rdgw'))]"
                                        }
                                        ],
                    "access": "Allow",
                    "priority": 110,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "AllowCustomRdsh",
                    "id": "/subscriptions/MOIS Cloud Development/resourceGroups/moisaio/providers/Microsoft.Network/networkSecurityGroups/moiskabeer-vnet-subnet-nsg/securityRules/AllowCustomRdsh",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow custom traffic from all VMs in VNET",
                    "protocol": "tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "*",
                    "destinationApplicationSecurityGroups": [
                                        {
                                            "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', concat(parameters('prefix'), '-asg-rdsh'))]"
                                        }
                                        ],
                    "access": "Allow",
                    "priority": 120,
                    "direction": "Inbound"
                    }
                }
                ],
                "defaultSecurityRules": [
                {
                    "name": "AllowVnetInBound",
                    "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/moiskabeer-vnet-subnet-nsg/defaultSecurityRules/AllowVnetInBound",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound"
                    }
                },  
                {
                    "name": "AllowAzureLoadBalancerInBound",
                    "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/testnsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "DenyAllInBound",
                    "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/testnsg/defaultSecurityRules/DenyAllInBound",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound"
                    }
                },
                {
                    "name": "AllowVnetOutBound",
                    "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/testnsg/defaultSecurityRules/AllowVnetOutBound",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "AllowInternetOutBound",
                    "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/testnsg/defaultSecurityRules/AllowInternetOutBound",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound"
                    }
                },
                {
                    "name": "DenyAllOutBound",
                    "id": "/subscriptions/subid/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/testnsg/defaultSecurityRules/DenyAllOutBound",
                    "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound"
                    }
                }
                ],
                "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2022-03-01",
            "name": "[parameters('virtualMachineName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('networkInterfaceName')]",
                "[variables('availabilitySetName')]",
                "[variables('loadBalancerName')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]"
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachineName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2019-Datacenter",
                        "version": "17763.3127.220119"  // use latest after https://support.microsoft.com/en-us/topic/kb5004442-manage-changes-for-windows-dcom-server-security-feature-bypass-cve-2021-26414-f1400b52-c141-43d2-941e-37ed901c769c is addressed
                    },
                    "osDisk": {
                        "name": "[concat(parameters('prefix'),'_OSDisk')]",
                        "caching": "ReadOnly",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        }
                    },
                    "dataDisks": [
                        {
                            "name": "[concat(parameters('prefix'), '_DataDisk')]",
                            "caching": "ReadWrite",
                            "createOption": "Empty",
                            "diskSizeGB": 20,
                            "managedDisk": {
                                "storageAccountType": "StandardSSD_LRS"
                            },
                            "lun": 0
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                        }
                    ]
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "apiVersion": "2022-03-01",
                    "name": "CreateADForest",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[parameters('virtualMachineName')]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Powershell",
                        "type": "DSC",
                        "typeHandlerVersion": "2.19",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "ModulesUrl": "[uri(parameters('_artifactsLocation'), concat('DSC/CreateADPDC.zip', parameters('_artifactsLocationSasToken')))]",
                            "ConfigurationFunction": "CreateADPDC.ps1\\CreateADPDC",
                            "Properties": {
                                "DomainName": "[parameters('domainName')]",
                                "AdminCreds": {
                                    "UserName": "[parameters('adminUsername')]",
                                    "Password": "PrivateSettingsRef:AdminPassword"
                                }
                            }
                        },
                        "protectedSettings": {
                            "Items": {
                                "AdminPassword": "[parameters('adminPassword')]"
                            }
                        }
                    }
                },
                {
                    "type": "Microsoft.Compute/virtualMachines/extensions",
                    "apiVersion": "2022-03-01",
                    "name": "[concat(parameters('virtualMachineName'),'/config-app')]",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[parameters('virtualMachineName')]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Compute",
                        "type": "CustomScriptExtension",
                        "typeHandlerVersion": "1.10",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "timestamp":123456789
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File ', variables('firstFileName'), ' ', parameters('arguments'))]",
                            "storageAccountName": "ps1file",
                            "storageAccountKey": "[variables('SASKey')]",
                            "fileUris": "[split(parameters('fileUris'), ' ')]"
                            
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2021-04-01",
            "name": "UpdateVNetDNS",
            "dependsOn": [
                "CreateADForest"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[uri(parameters('_artifactsLocation'), concat('nestedtemplates/vnet.json', parameters('_artifactsLocationSasToken')))]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "virtualNetworkName": {
                        "value": "[parameters('virtualNetworkName')]"
                    },
                    "virtualNetworkAddressRange": {
                        "value": "[parameters('virtualNetworkAddressRange')]"
                    },
                    "subnetName": {
                        "value": "[parameters('subnetName')]"
                    },
                    "subnetRange": {
                        "value": "[parameters('subnetRange')]"
                    },
                    "DNSServerAddress": {
                        "value": [
                            "[parameters('privateIPAddress')]"
                        ]
                    },
                    "location": {
                        "value": "[parameters('location')]"
                    }
                }                
            }         
        }
    ],
    "outputs": {
        "dnsIpAddress": {
            "type": "string",
            "value": "[parameters('privateIPAddress')]"
        },
        "domainName": {
            "type": "string",
            "value": "[parameters('domainName')]"
        },
        "virtualNetworkSubscriptionId": {
            "type": "string",
            "value": "[subscription().subscriptionId]"
        },
        "virtualNetworkResourceGroupName": {
            "type": "string",
            "value": "[resourceGroup().name]"
        },
        "virtualNetworkName": {
            "type": "string",
            "value": "[parameters('virtualNetworkName')]"
        },
        "virtualNetworkSubnetName": {
            "type": "string",
            "value": "[parameters('subnetName')]"
        },
        "virtualNetworkAddressPrefixes": {
            "type": "string",
            "value": "[parameters('virtualNetworkAddressRange')]"
        }
    }
}
